# GoldenGooseProspectors

./: .gitignore  README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  schema.prisma
backend/notebooks/gmo_coin/: get_kline.py
frontend/: Dockerfile
