[tool.poetry]
name = "eggs"
version = "0.1.0"
description = ""
authors = ["kohei25"]
readme = "README.md"
packages = [{include = "eggs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
websocket-client = "^1.7.0"
prisma = "^0.12.0"
polars = "^0.20.16"
plotly = "^5.20.0"
pandas = "^2.2.1"
pyarrow = "^15.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyterlab = "^4.0.8"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
